# Art-For-Everywhere-Android-AR-Hackaton-App

./: README.md
AppBaseSkeleton/: settings.gradle
AppBaseSkeleton/app/src/main/java/com/example/artforeverywhere/: CameraActivity.java  MainActivity.java
AppBaseSkeleton/app/src/test/java/com/example/artforeverywhere/: ExampleUnitTest.java
AppBaseSkeleton/gradle/wrapper/: gradle-wrapper.properties
AppVuforiaPrototype/: readme.txt
AppVuforiaPrototype/licenses/: license_3rdpartynotice.txt
Prototype/samples/src/Android/: build.gradle  gradle.properties  settings.gradle
Prototype/samples/src/Android/app/: build.gradle
Prototype/samples/src/Android/app/src/main/: AndroidManifest.xml
Prototype/samples/src/Android/app/src/main/cpp/: CMakeLists.txt  GLESRenderer.cpp  GLESRenderer.h  GLESUtils.cpp  GLESUtils.h  Shaders.h  VuforiaWrapper.cpp
Prototype/samples/src/Android/app/src/main/java/com/vuforia/engine/native_sample/: MainActivity.kt  SplashScreenActivity.kt  Texture.kt  VuforiaActivity.kt
Prototype/samples/src/Android/app/src/main/res/layout/: activity_main.xml  activity_splash_screen.xml  progress_indicator.xml
Prototype/samples/src/Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Prototype/samples/src/Android/arcore/include/: arcore_c_api.h
Prototype/samples/src/Assets/ImageTargets/: MKDB.xml  TestDB1.xml  plane.mtl  untitled.mtl
Prototype/samples/src/Assets/ModelTargets/: VuforiaMars_ModelTarget.xml
Prototype/samples/src/CrossPlatform/: AppController.cpp  AppController2.cpp  AppController2.h  Log.h  MemoryStream.h  Models.h  tiny_obj_loader.h
Prototype/samples/src/Media/: target_mars_readme.txt
Py-textures-processor/: colortrans.py
app/: build.gradle
app/src/androidTest/java/com/example/artforeverywhere/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
